--- a/deposit.html
+++ b/deposit.html
@@ -145,8 +145,8 @@
         }
 
         .logo-image {
-            width: 90px;
-            height: 90px;
+            width: 100px;
+            height: 100px;
             border-radius: 10px;
             object-fit: contain; /* Para que no se deforme */
         }
@@ -181,7 +181,7 @@
                     class="logo-image">
             </div>
 
-            <h4>Depositar Dinero 💋</h4>
+            <h4>✨Depositar Dinero✨</h4>
             <p class="text-muted">Agrega fondos a tu wallet</p>
         </div>
 
@@ -281,7 +281,7 @@
         }
 
         function processDeposit() {
-            const amount = document.getElementById('amount').value;
+            const amount  = document.getElementById('amount').value;
 
             if (!amount || amount <= 0) {
                 alert('Por favor ingresa un monto válido');
