actualizaciones de nuevo

--- a/deposit.html
+++ b/deposit.html
@@ -141,6 +141,7 @@
             font-weight: 700;
             background: linear-gradient(135deg, var(--alke-primary) 15%, var(--alke-secondary) 90%, var(--alke-dark) 100%);
             -webkit-background-clip: text;
+            background-clip: transparent;
             -webkit-text-fill-color: transparent;
         }
 
