--- a/menu.html
+++ b/menu.html
@@ -171,6 +171,7 @@
       font-weight: 700;
       background: linear-gradient(135deg, var(--alke-primary) 0%, var(--alke-secondary) 100%);
       -webkit-background-clip: text;
+      background-clip: transparent;
       -webkit-text-fill-color: transparent;
     }
 
