--- a/sendmoney.html
+++ b/sendmoney.html
@@ -140,8 +140,9 @@
         .logo-text {
             font-size: 1.8rem;
             font-weight: 700;
-            background: linear-gradient(135deg, var(--alke-primary) 15%, var(--alke-secondary) 90%, var(--alke-dark) 100%);
+            background: linear-gradient(135deg, var(--alke-primary) 40%, var(--alke-secondary) 90%, var(--alke-dark) 100%);
             -webkit-background-clip: text;
+            background-clip: transparent;
             -webkit-text-fill-color: transparent;
         }
 
