--- a/login.html
+++ b/login.html
@@ -207,7 +207,7 @@
                 <div class="form-text text-muted" id="password-help"></div>
             </div>
 
-            <!-- Recordar y Olvidé -->
+            <!-- Recordar y Olvidar -->
             <div class="d-flex justify-content-between align-items-center mb-3">
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" id="remember">
@@ -235,7 +235,8 @@
 
             <!-- Botones Sociales -->
             <div class="d-flex gap-2 mb-3">
-                <!-- En login.html, reemplaza el botón de Google actual por: -->
+
+                 <!-- Hay que autorizar el webeito de credenciales de google para que funcione este botón -->
                 <a href="#" class="btn social-btn flex-fill" id="googleLogin" target="_blank">
                     <i class="bi bi-google me-2"></i>Google
                 </a>
